--- a/TheaterJSF/web/Test.xhtml
+++ b/TheaterJSF/web/Test.xhtml
@@ -3,11 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>This is our Test</title>
     </h:head>
     <h:body>
         Hello from Facelets
         Test
+        This is a new line in our test
     </h:body>
 </html>
 
