--- a/TheaterJSF/web/Test.xhtml
+++ b/TheaterJSF/web/Test.xhtml
@@ -8,7 +8,7 @@
     <h:body>
         Hello from Facelets
         Test
-        This is a new line in our test
+        This is a new line in our test2
     </h:body>
 </html>
 
