--- a/TheaterJSF/web/Test.xhtml
+++ b/TheaterJSF/web/Test.xhtml
@@ -9,6 +9,7 @@
         Hello from Facelets
         Test
         This is a new line in our test
-        3
+        3fjkdsl
+        This is another line
     </h:body>
 </html>
