--- a/TheaterJSF/web/Test.xhtml
+++ b/TheaterJSF/web/Test.xhtml
@@ -7,5 +7,14 @@
     </h:head>
     <h:body>
         Hello from Facelets
+        Test
+        I"M ADDING THIS LINE IN THE MIDDLE
+        This is a new line in our test
+        3fjkdsl
+        I AM ALSO ADDING THIS LINE
+        This is another line
+        This is a new line in our test2
+        CHECKING WHAT WILL HAPPEN
+        Foo
     </h:body>
 </html>
