--- a/TheaterJSF/web/Test.xhtml
+++ b/TheaterJSF/web/Test.xhtml
@@ -15,6 +15,6 @@
         This is another line
         This is a new line in our test2
         CHECKING WHAT WILL HAPPEN
-        Foo
+        Food
     </h:body>
 </html>
