--- a/TheaterJSF/web/Theaters.xhtml
+++ b/TheaterJSF/web/Theaters.xhtml
@@ -35,7 +35,9 @@
                   <f:facet name="header">
                     <h:outputText value="Theater Name"/>
                   </f:facet>
-                  <h:outputText value="#{theater.theater_name}"/>
+                    <h:outputLink value="Showtimes.xhtml">
+                        <h:outputText value="#{theater.theater_name}"/>
+                    </h:outputLink>
                 </h:column>
                 <h:column>
                   <f:facet name="header">
