--- a/TheaterJSF/web/Showtimes.xhtml
+++ b/TheaterJSF/web/Showtimes.xhtml
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Showtimes</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        Theater ID you selected
     </h:body>
 </html>
 
