--- a/TheaterJSF/web/Showtimes.xhtml
+++ b/TheaterJSF/web/Showtimes.xhtml
@@ -1,12 +1,50 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Showtimes</title>
+        <title>Books by an Author</title>
+        <style type="text/css">
+         table.books td {
+             padding: 5px;
+             text-align: left;
+             font-family: Arial, Verdana, sans-serif;
+             border: 1px solid #000; 
+             background-color: #A4FFFF;    
+             color: #BB0000;    
+             border-bottom: 1px solid #000;
+         }   
+        </style>
     </h:head>
     <h:body>
-        Theater ID you selected
+        <f:view>
+            <h3>Books for #{showAuthorBean.author.authorName}
+            </h3>
+            <h:form>
+                <h:dataTable styleClass="books"
+                             value="#{homeBean.moviesList}" var="movies">
+                <h:column>
+                  <f:facet name="header">
+                    <h:outputText value="Isbn"/>
+                  </f:facet>
+                    <h:outputText value="#{movies.title}"/>
+                </h:column>
+                <h:column>
+                  <f:facet name="header">
+                    <h:outputText value="Title"/>
+                  </f:facet>
+                  <h:outputText value="#{movies.plot}"/>
+                </h:column>
+                <h:column>
+                  <f:facet name="header">
+                    <h:outputText value="Pages"/>
+                  </f:facet>
+                    <h:outputText value="#{movies.rating}"/>
+                </h:column> 
+                </h:dataTable>
+
+            </h:form>
+        </f:view>
     </h:body>
 </html>
-
