--- a/TheaterJSF/web/Theaters.xhtml
+++ b/TheaterJSF/web/Theaters.xhtml
@@ -35,7 +35,7 @@
                   <f:facet name="header">
                     <h:outputText value="Theater Name"/>
                   </f:facet>
-                    <h:outputLink value="Showtimes.xhtml">
+                    <h:outputLink value="#{homeBean.selectedTheater(theater)}" >
                         
                         <h:outputText value="#{theater.theater_name}"/>
                         <f:param name="theaterID" value="#{theater.theaterId}"/>
