--- a/TheaterJSF/web/Showtimes.xhtml
+++ b/TheaterJSF/web/Showtimes.xhtml
@@ -6,7 +6,8 @@
         <title>Showtimes</title>
     </h:head>
     <h:body>
-        Theater ID you selected
+        Theater ID you selected #{param.theID}
+        
     </h:body>
 </html>
 
