--- a/TheaterJSF/web/Showtimes.xhtml
+++ b/TheaterJSF/web/Showtimes.xhtml
@@ -53,8 +53,8 @@
                   </h:selectOneMenu>
                      <h:commandButton value="Select Time"                                  
                           action="Checkout.xhtml"> 
-                    <f:param name="selectedTime" value="#{homeBean.selectedTime}" />
-                
+                        <f:param name="selectedTime" value="#{homeBean.selectedTime}" />
+                    </h:commandButton>
                 </h:column>     
                     
                 </h:dataTable>
