--- a/TheaterJSF/web/Checkout.xhtml
+++ b/TheaterJSF/web/Checkout.xhtml
@@ -17,7 +17,7 @@
 
             <ui:define name="content">
                 <h1>Checkout Information</h1>
-                
+                #{param.selectedTime}
             </ui:define>
             
             <ui:define name="bottom"/>
