--- a/TheaterJSF/web/Checkout.xhtml
+++ b/TheaterJSF/web/Checkout.xhtml
@@ -17,7 +17,11 @@
 
             <ui:define name="content">
                 <h1>Checkout Information</h1>
-                #{param.selectedTime}
+                <h:form>
+                    
+                </h:form>
+                #{param.timeID}
+                #{param.movieID}
             </ui:define>
             
             <ui:define name="bottom"/>
