--- a/TheaterJSF/web/Home.xhtml
+++ b/TheaterJSF/web/Home.xhtml
@@ -13,9 +13,7 @@
         <ui:composition template="./Template/TheaterTemplate.xhtml">
             <ui:define name="top"/>
             
-            <ui:define name="left">
-                <h:graphicImage value="Resources/images/WebsiteFlowChart.PNG" height="500" width="700"/>
-            </ui:define>
+            <ui:define name="left"/>
 
             <ui:define name="content">
                 <h1>Enter your zip code!</h1>
