--- a/TheaterJSF/web/Theaters.xhtml
+++ b/TheaterJSF/web/Theaters.xhtml
@@ -27,8 +27,7 @@
             <ui:define name="content">
                 <h:form>
                 <h2>
-                    Theaters Near
-                    <h:outputText value="#{homeBean.zip}"/>
+                    Theaters Near <h:outputText value="#{homeBean.zip}"/>
                 </h2>
                 
                 <h:dataTable styleClass="theaters"
