--- a/TheaterJSF/web/Home.xhtml
+++ b/TheaterJSF/web/Home.xhtml
@@ -9,7 +9,12 @@
          <title>Sunnymart Home</title>
     </h:head>
    
+    <!-- 
+        This is a very simple page.  Takes a zip and puts it into our homeBean
+        Most data will be stored in the homeBean
+    -->
     <h:body>
+        
         <ui:composition template="./Template/TheaterTemplate.xhtml">
             <ui:define name="top"/>
             
@@ -18,6 +23,11 @@
             <ui:define name="content">
                 <h1>Enter your zip code!</h1>
                 <h:form>
+                    <!-- 
+                        maxLength limits the zip to 5 characters
+                        the f:validator called beans.ZipValidator checks to 
+                        make sure there are 5 characters and that all characters are numbers
+                    -->    
                     <h:inputText maxlength="5" value="#{homeBean.zip}">
                         <f:passThroughAttribute name="placeholder" value="Enter Zip Code" />
                         <f:validator validatorId="beans.ZipValidator" />
