--- a/TheaterJSF/web/Payment.xhtml
+++ b/TheaterJSF/web/Payment.xhtml
@@ -10,6 +10,7 @@
     </h:head>
    
     <h:body>
+         <!-- This page is simple enough... -->
         <ui:composition template="./Template/TheaterTemplate.xhtml">
             <ui:define name="top"/>
             
