--- a/TheaterJSF/web/Showtimes.xhtml
+++ b/TheaterJSF/web/Showtimes.xhtml
@@ -79,7 +79,8 @@
                         </h:column>
 
                         </h:dataTable>
-                        
+                        <h:commandButton id="Back" action="Theaters.xhtml" value="Back" />
+
                     </h:form>
 
                 </f:view>
